# MPC_CollisionAvoidance

./: .gitignore  .gitmodules  README.md
catkin_ws/src/nmpc_ca/: CMakeLists.txt  package.xml
catkin_ws/src/nmpc_ca/matlab/: speed_heading_tests.m
catkin_ws/src/nmpc_ca/scripts/race_cars/: main.py
catkin_ws/src/nmpc_ca/scripts/usv_acados/: acados_settings.py  main.py  plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_full_model/: export_ode_model.py  generate_c_code.py
catkin_ws/src/nmpc_ca/scripts/usv_guidance/: acados_settings.py  main.py  plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_guidance2/: acados_settings.py  main.py  plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_guidance3/: acados_settings.py  main.py  plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_guidance4/: acados_settings.py  main.py  plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_guidance5/: acados_settings.py  main.py  plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_guidance_ca/: acados_settings.py  main.py  plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_guidance_ca1/: acados_settings.py  main.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_guidance_ca2/: plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_low_level/: usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_pf/: acados_settings.py  main.py  plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_pf_ca/: acados_settings.py  main.py  plotFcn.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_pf_curved/: acados_settings.py  curve.py  main.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_pf_psid/: acados_settings.py  usv_model.py
catkin_ws/src/nmpc_ca/scripts/usv_position_control/: main.py  plotFcn.py
catkin_ws/src/nmpc_ca/src/: acados_mpc.cpp  acados_pf.cpp  nmpc_guidance.cpp  nmpc_guidance2.cpp  nmpc_guidance3.cpp  nmpc_guidance4.cpp  nmpc_guidance5.cpp  nmpc_guidance_ca.cpp  nmpc_guidance_ca1.cpp  nmpc_guidance_ca2.cpp  nmpc_low_level.cpp  nmpc_pf.cpp  nmpc_pf_ca.cpp  nmpc_pf_curved.cpp  nmpc_pf_psid.cpp  nmpc_traj_plan.cpp
catkin_ws/src/simulation/: CMakeLists.txt  package.xml
catkin_ws/src/simulation/msg/: obstacles_list.msg
catkin_ws/src/simulation/scripts/: obstacle_sim_node.py
